--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p class="card-text">分為「類型」和「地區」兩種分類方式，讓你快速找到自己期待已久的動畫!</p>
           </div>
           <div class="card-footer">
-            <a href="index.html" class="btn btn-primary">Learn More</a>
+            <a href="region-Japan.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
