--- a/type-passion.html
+++ b/type-passion.html
@@ -155,7 +155,7 @@
 
         <p>麻木於和平，害怕冒險與改變，直到 845 年，最外層的瑪利亞之牆，被身高超過 60m 的超大型巨人，踢破城牆，無數巨人湧入城鎮，親眼見到母親被巨人一口咬碎的慘劇的艾連，發誓要消滅所有巨人。</p>
 
-        <a class="btn btn-primary" href="blog-post.html">View
+        <a class="btn btn-primary" href="blog-post 13.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
