--- a/index.html
+++ b/index.html
@@ -180,12 +180,23 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://i.imgur.com/AemxpKt.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="blog-post 13.html">進擊的巨人</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">《進擊的巨人》的故事描述百年前世界莫名出現神秘的巨人怪物，不斷殘忍食人，人類幾乎無法與之對抗，最後人類建造了三道寬 3 公尺、高 50 公尺的高聳圍牆，百年來未有巨人攻破，人們漸漸習慣牆內的生活，麻木於和平，害怕冒險與改變，直到 845 年，最外層的瑪利亞之牆，被身高超過 60m 的超大型巨人，踢破城牆，無數巨人湧入城鎮，親眼見到母親被巨人一口咬碎的慘劇的艾連，發誓要消滅所有巨人。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="https://i.imgur.com/5DqnviT.jpg" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="blog-post 26">社會喵</a>
+            </h4>
+            <p class="card-text">粉色雄喵和寵貓狂男的爆笑日常！校園混混李苗宇一覺醒來發現自己變成了一隻粉毛萌貓，身下還壓著同班的三好帥哥彭煜，無法逃脫的李苗宇只得屈尊成為一隻“家貓”。萬萬沒想到這個看似良善的“主人”竟然是個吸貓狂魔，每天都在貓貓身邊不懷好意地轉悠……</p>
           </div>
         </div>
       </div>
@@ -194,9 +205,9 @@
           <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="blog-post 1.html">小小兵</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">童心未眠，小黃人攜萌友爆笑回歸。由環球攜手打造，照明娛樂呈獻的40支小黃人官方宣傳動畫“小黃人和萌友”獨家首播，傾情放送！看又壞又賤又蠢又萌的小黃人軍團如何耍寶，承包你的所有萌點！</p>
           </div>
         </div>
       </div>
@@ -205,9 +216,9 @@
           <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              <a href="blog-post 10.html">食戟之靈 第5季</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+            <p class="card-text">♥升上第一席的料理人鬥爭♥ ♥不管是食戟還是繪里奈都不能輸阿♥ 於家中的定食屋「幸平餐館」磨練料理手藝的幸平創真，受到父親的勸說來到了超菁英料理學校「遠月茶寮料理學園」入學。與勁敵之間的食戟、夥伴間的互相鑽研，作為料理人持續的成長著。時光流逝，升上2年級的創真終於爬上學園的頂點，遠月十傑評議會「第一席」的寶座！就在此時，遠月學園收到了世界級料理競賽「THE BLUE」的邀請函。然而，以「正統」聞名的美食大賽這次卻不太一樣，盡是一些脫離常軌的題目！？決定下一代料理界旗幟人物的食戟，即將展開！</p>
           </div>
         </div>
       </div>
@@ -216,9 +227,9 @@
           <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four</a>
+              <a href="blog-post 14.html">航海王</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">《擁有財富、名聲、勢力、擁有世界上的一切的「 海賊王 」哥爾‧D‧羅傑在即將遭到處刑前說了一段話：「 想要我的財寶嗎？想要的話可以全部給你。去找吧！我把所有的財寶都放在那裡！ 」後來世界上的人們將這個寶藏稱作「大祕寶」（ONE PIECE），為了爭奪大祕寶「ONE PIECE」，而先後爭相出海成為海賊，因此造就了「大海賊時代」。主角 蒙其‧D‧魯夫為了要實現與「紅髮」傑克的約定而出海，在遙遠的路途上找尋著志同道合的夥伴，進入「偉大的航道」，目標是得到「ONE PIECE」與成為「海賊王」。</p>
           </div>
         </div>
       </div>
@@ -227,20 +238,9 @@
           <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="blog-post 15.html">數碼寶貝大冒險</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Six</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+            <p class="card-text">《在數碼世界發生某些異常狀況之際，為了修復這些異常狀況，被選召的普遍人類。他們比其他人更早得到搭檔數碼獸，附加了「為了修復異常狀況而戰」的義務</p>
           </div>
         </div>
       </div>
