--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('https://github.com/ktc87/AnimationPit.github.io/blob/main/index_recommad_UI.jpg')">
+        <div class="carousel-item" style="background-image: src='index_recommand_UI.jpg'">
           <div class="carousel-caption d-none d-md-block">
             <h3>Second Slide</h3>
             <p>This is a description for the second slide.</p>
