--- a/blog-post 13.html
+++ b/blog-post 13.html
@@ -205,7 +205,7 @@
                     <a href="region-Japan.html">日本</a>
                   </li>
                   <li>
-                    <a href="region-western.html">歐美</a>
+                    <a href="region-Western.html">歐美</a>
                   </li>
                   <li>
                     <a href="region-China.html">中國</a>
